fix: disable tap highlights on iOS

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -7,6 +7,7 @@
 html {
   background-color: var(--color-body);
   color-scheme: light;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html.dark {
